src/main/metadata/objects/CallOutHandlerSettingDFW__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>callout time value for webservice call</description>
    <fields>
        <fullName>DEFAULT_CALLOUT_TIME__c</fullName>
        <label>DEFAULT_CALLOUT_TIME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAILED_STATUS__c</fullName>
        <label>FAILED_STATUS</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSON_CONTENT_TYPE__c</fullName>
        <label>JSON_CONTENT_TYPE</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KO_STATUS__c</fullName>
        <label>KO_STATUS</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAX_CALLOUT_TIME__c</fullName>
        <label>MAX_CALLOUT_TIME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OK_STATUS__c</fullName>
        <label>OK_STATUS</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLAIN_TEXT_CONTENT_TYPE__c</fullName>
        <label>PLAIN_TEXT_CONTENT_TYPE</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUEUED_STATUS__c</fullName>
        <label>QUEUED_STATUS</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REQUEST_BODY_NAME__c</fullName>
        <label>REQUEST_BODY_NAME</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REQUEST_CERT_NAME__c</fullName>
        <label>REQUEST_CERT_NAME</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REQUEST_HEADERS_NAME__c</fullName>
        <label>REQUEST_HEADERS_NAME</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RESPONSE_NAME__c</fullName>
        <label>RESPONSE_NAME</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>CallOutHandlerSettingDFW</label>
</CustomObject>